fixed a bunch of bugs, added the scheduler, enable usermode

--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('trajan', 'cpp', version: '0.0.1')
+project('hades', 'cpp', version: '0.0.1')
 main_sources = files(
     'source/cxx/sys/x86/apic.cpp',
     'source/cxx/sys/acpi.cpp',
@@ -14,15 +14,15 @@ main_sources = files(
     'source/cxx/mm/vmm.cpp',
 	'source/cxx/fs/vfs.cpp',
 	'source/cxx/fs/rootfs.cpp',
-	'source/cxx/fs/devfs.cpp',
+	'source/cxx/fs/dev.cpp',
+	'source/cxx/fs/fat.cpp',
 	'source/cxx/driver/ahci.cpp',
 	'source/cxx/driver/part.cpp'
 )
 main_includes = include_directories('include')
 nasm_sources = files(
     'source/asm/boot.asm',
-    'source/asm/irq.asm',
-    'source/asm/lock.asm'
+    'source/asm/irq.asm'
 )
 
 nasm = find_program('nasm')
@@ -30,16 +30,23 @@ nasm_gen = generator(nasm, output: '@BASENAME@.o', arguments: ['-f', 'elf64', '-
 nasm_objects = nasm_gen.process(nasm_sources)
 
 source_dir = join_paths(meson.source_root(), 'source')
-build_dir = meson.build_root()
 
 ld_script = join_paths(source_dir, 'misc', 'linker.ld')
 
 flags_cpp = [
     '-std=gnu++20',
-	'-g3',
-	'-Og',
-	'-ffreestanding',
 	'-I$(INCLUDE)',
+	'-ggdb',
+	'-O0',
+	'-ffreestanding',
+	'-fdiagnostics-color=always',
+	'-fno-stack-protector',
+	'-fno-omit-frame-pointer',
+	'-fno-rtti',
+	'-fno-exceptions',
+	'-fno-use-cxa-atexit',
+	'-Wno-int-to-pointer-cast',
+	'-fno-pic',
 	'-mno-sse',
 	'-mno-sse2',
 	'-mno-mmx',
@@ -47,17 +54,6 @@ flags_cpp = [
 	'-mno-red-zone',
 	'-m64',
 	'-march=x86-64',
-	'-fdiagnostics-color=always',
-	'-fno-stack-protector',
-	'-fno-omit-frame-pointer',
-	'-fno-merge-constants',
-	'-fno-rtti',
-	'-fno-exceptions',
-	'-fno-use-cxa-atexit',
-	'-Wno-pointer-arith',
-	'-Wno-int-to-pointer-cast',
-	'-Wno-volatile',
-	'-fno-pic',
 	'-mcmodel=kernel'
 ]
 
@@ -68,18 +64,20 @@ flags_ld = [
 	'-no-pie'
 ]
 
-# PROJECT_NAME=$1
-# IMG_NAME=$2
-# KERNEL_FILE=$3
+make_elf = executable('hades.elf', main_sources, nasm_objects, include_directories: main_includes, link_depends: ld_script, install: true, cpp_args: flags_cpp, link_args: flags_ld, build_by_default: false)
 
-make_elf = executable('trajan.elf', main_sources, nasm_objects, include_directories: main_includes, link_depends: ld_script, install: true, cpp_args: flags_cpp, link_args: flags_ld, build_by_default: false)
-make_trajan = custom_target(
-	'trajan',
+script_path = join_paths(meson.source_root(), 'scripts', 'post.py')
+make_hades = custom_target(
+	'hades',
 	depends: make_elf,
 	input: make_elf,
 	output: '_',
-	command: ['scripts/exec_scripts.sh', 
+	command: [script_path,
 		meson.project_name(), 
-		make_elf],
+		'-k', make_elf,
+		
+		'-s', join_paths(meson.source_root(), 'source'),
+		'-b', meson.build_root(),
+	],
 	build_by_default: true
 )
