--- a/source/misc/limine.cfg
+++ b/source/misc/limine.cfg
@@ -1,8 +1,6 @@
 TIMEOUT=0
 
-:trajan
+:hades
 PROTOCOL=stivale2
 KERNEL_CMDLINE=root=/dev/sda1
-KERNEL_PATH=hdd://1:1/trajan.elf
-
-MODULE_PATH=hdd://1:1/initrd
+KERNEL_PATH=hdd://1:1/hades.elf
