Refactor a bunch of different types

--- a/meson.build
+++ b/meson.build
@@ -8,6 +8,7 @@ main_sources = files(
 	'source/cxx/sys/sched/sched.cpp',
     'source/cxx/sys/sched/wait.cpp',
     'source/cxx/sys/sched/signal.cpp',
+    'source/cxx/sys/sched/syscall.cpp',
     'source/cxx/sys/pit.cpp',
 	'source/cxx/sys/runtime.cpp',
     'source/cxx/sys/syscall.cpp',
@@ -17,15 +18,18 @@ main_sources = files(
 	'source/cxx/mm/mm.cpp',
     'source/cxx/mm/pmm.cpp',
     'source/cxx/mm/vmm.cpp',
+    'source/cxx/mm/syscall.cpp',
 	'source/cxx/fs/vfs.cpp',
 	'source/cxx/fs/rootfs.cpp',
 	'source/cxx/fs/dev.cpp',
 	'source/cxx/fs/fat.cpp',
+    'source/cxx/fs/syscall.cpp',
     'source/cxx/driver/tty/tty.cpp',
     'source/cxx/driver/tty/pty.cpp',
     'source/cxx/driver/tty/disciplines.cpp',
     'source/cxx/driver/video/vesa.cpp',
     'source/cxx/driver/video/vt.cpp',
+    'source/cxx/driver/video/fbdev.cpp',
     'source/cxx/flanterm/flanterm.cpp',
     'source/cxx/flanterm/backends/fb.cpp',
 	'source/cxx/driver/ahci.cpp',
