Various bugfixes, next: user/group support, and file / open permissions

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,6 @@
 /build*/
 
 /sys/
-/user/*
-
-!/user/patches
-!/user/cross_file.txt
-!/user/native_file.txt
-!/user/versions.txt
+/user/
 
 persist.img
