extensive changes to symlink resolution, add internal data type for mux, update flanterm version, other bugfixes

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -42,7 +42,7 @@
                     "-machine", "q35",
 
                     "-drive", "index=0,media=disk,file=build/hades.img,format=raw",
-                    "-drive", "index=1,media=disk,file.filename=build/persist.img,file.locking=off,format=raw"
+                    "-drive", "index=1,media=disk,file=build/persist.img,format=raw"
                 ]
             },
             "dependsOn": ["Build Hades"]
@@ -69,7 +69,7 @@
 
                     "-machine", "q35",
                     "-drive", "index=0,media=disk,file=build/hades.img,format=raw",
-                    "-drive", "index=1,media=disk,file.filename=build/persist.img,file.locking=off,format=raw",
+                    "-drive", "index=1,media=disk,file=build/persist.img,format=raw"
                 ]
             },
             "dependsOn": ["Build Hades"]
@@ -96,8 +96,8 @@
                     "-no-reboot", "-no-shutdown",
 
                     "-machine", "q35",
-                    "-hda", "build/hades.img",
-                    "-hdb", "hades.qcow2"
+                    "-drive", "index=0,media=disk,file=build/hades.img,format=raw",
+                    "-drive", "index=1,media=disk,file=build/persist.img,format=raw"
                 ]
             },
             "dependsOn": ["Build Hades"]
@@ -125,8 +125,8 @@
                     "-no-reboot", "-no-shutdown",
 
                     "-machine", "q35",
-                    "-hda", "build/hades.img",
-                    "-hdb", "hades.qcow2"
+                    "-drive", "index=0,media=disk,file=build/hades.img,format=raw",
+                    "-drive", "index=1,media=disk,file=build/persist.img,format=raw"
                 ]
             },
             "dependsOn": ["Build Hades"]
