--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/managarm/lai
 [submodule "base_files"]
 	path = base-files
-	url = https://github.com/rozjin/base_files
+	url = https://github.com/rozjin/base-files
