--- a/meson.build
+++ b/meson.build
@@ -2,6 +2,7 @@ project('hades', ['cpp', 'c'], version: '0.0.1')
 main_sources = files(
     'source/cxx/arch/x86/vmm/syscall.cpp',
     'source/cxx/arch/x86/vmm/vmm.cpp',
+    'source/cxx/arch/x86/bus/pci.cpp',
     'source/cxx/arch/x86/apic.cpp',
     'source/cxx/arch/x86/core.cpp',
     'source/cxx/arch/x86/irq.cpp',
@@ -11,11 +12,17 @@ main_sources = files(
     'source/cxx/arch/x86/sched.cpp',
     'source/cxx/arch/x86/signal.cpp',
     'source/cxx/arch/x86/smp.cpp',
+    'source/cxx/arch/x86/ssp.cpp',
     'source/cxx/arch/x86/syscall.cpp',
     'source/cxx/arch/x86/time.cpp',
 
     'source/cxx/arch/x86/copy.cpp',
     'source/cxx/arch/x86/exception.cpp',
+
+    'source/cxx/driver/bus/pci.cpp',
+
+    'source/cxx/driver/pci/ahci.cpp',
+    'source/cxx/driver/pci/net.cpp',
 
     'source/cxx/driver/net/arp.cpp',
     'source/cxx/driver/net/ip.cpp',
@@ -31,6 +38,8 @@ main_sources = files(
     'source/cxx/driver/video/vesa.cpp',
     'source/cxx/driver/video/vt.cpp',
 
+    'source/cxx/driver/dtable.cpp',
+
     'source/cxx/driver/ahci.cpp',
     'source/cxx/driver/part.cpp',
 
@@ -39,6 +48,7 @@ main_sources = files(
     'source/cxx/flanterm/flanterm.cpp',
     'source/cxx/flanterm/backends/fb.cpp',
 
+    'source/cxx/fs/cache.cpp',
     'source/cxx/fs/dev.cpp',
     'source/cxx/fs/ext2.cpp',
     'source/cxx/fs/rootfs.cpp',
@@ -54,12 +64,12 @@ main_sources = files(
     'source/cxx/sys/sched/sched.cpp',
     'source/cxx/sys/sched/signal.cpp',
     'source/cxx/sys/sched/syscall.cpp',
-    'source/cxx/sys/sched/wait.cpp',
+    'source/cxx/sys/sched/event.cpp',
 
     'source/cxx/sys/acpi.cpp',
     'source/cxx/sys/laihost.cpp',
-    'source/cxx/sys/pci.cpp',
     'source/cxx/sys/runtime.cpp',
+    'source/cxx/sys/ubsan.cpp',
 
     'source/cxx/util/elf.cpp',
     'source/cxx/util/string.cpp',
@@ -86,22 +96,23 @@ source_dir = join_paths(meson.project_source_root(), 'source')
 ld_script = join_paths(source_dir, 'misc', 'linker.ld')
 
 flags_common = [
-	'-ggdb',
-	'-O0',
-	'-ffreestanding',
-    '-nostdinc',
-	'-fdiagnostics-color=always',
-	'-fno-stack-protector',
+    '-m64',
+	'-march=x86-64',
+    '-mcmodel=kernel',
 	'-fno-omit-frame-pointer',
-	'-fno-pic',
+    '-fno-pic',
+	'-ffreestanding',
+	'-fstack-protector',
+	'-fdiagnostics-color=always',
+
+    '-nostdlib',
 	'-mno-sse',
 	'-mno-sse2',
 	'-mno-mmx',
 	'-mno-80387',
 	'-mno-red-zone',
-	'-m64',
-	'-march=x86-64',
-	'-mcmodel=kernel'
+
+	'-ggdb',
 ]
 
 flags_c = [
@@ -112,29 +123,41 @@ flags_cpp = [
     '-std=gnu++2b',
 	'-fno-rtti',
 	'-fno-exceptions',
-	'-fno-use-cxa-atexit',
+	'-fuse-cxa-atexit',
 ]
 
 flags_ld = [
 	'-T', ld_script,
     '-nostdlib',
-    '-nostartfiles',
-    '-nodefaultlibs',
-    '-lgcc',
-	'-Wl,-z,max-page-size=0x1000',
-	'-no-pie'
+    '-mcmodel=kernel',
+    '-fno-pic',
+    '-no-pie',
+    '-Wl,-z,max-page-size=0x1000,-n',
+    '-lgcc'
 ]
 
-lai_proj = subproject('lai')
+crtbegin_obj_command = run_command(meson.get_compiler('cpp'),  flags_common + flags_c, '-print-file-name=crtbegin.o')
+crtbegin_obj = crtbegin_obj_command.stdout().strip()
 
-lai_sources = lai_proj.get_variable('sources')
-lai_includes = lai_proj.get_variable('includes')
+crtend_obj_command = run_command(meson.get_compiler('cpp'),  flags_common + flags_c, '-print-file-name=crtend.o')
+crtend_obj = crtend_obj_command.stdout().strip()
+
+crt_files = files(crtbegin_obj, crtend_obj)
+
+add_global_arguments(flags_common + flags_c, language: 'c')
+add_global_link_arguments(flags_ld, language: 'c')
+add_global_arguments(flags_common + flags_cpp, language: 'cpp')
+add_global_link_arguments(flags_ld, language: 'cpp')
+
+lai_proj = subproject('lai')
+lai_dependency = lai_proj.get_variable('dependency')
 
 make_elf = executable(
-    'hades.elf', main_sources, lai_sources,
-    nasm_objects,
-    include_directories: [main_includes, lai_includes, freestnd_c_hdrs, freestnd_cpp_hdrs],
-    link_depends: ld_script, install: true, c_args: flags_common + flags_c, cpp_args: flags_common + flags_cpp, link_args: flags_ld, build_by_default: false)
+    'hades.elf', main_sources,
+    nasm_objects, objects: crt_files,
+    dependencies: [lai_dependency],
+    include_directories: [main_includes, freestnd_cpp_hdrs],
+    link_depends: ld_script, install: true, build_by_default: false)
 
 script_path = join_paths(meson.project_source_root(), 'scripts', 'post.py')
 custom_target(
