--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -96,5 +96,6 @@
         "string.h": "c",
         "barrier": "c"
     },
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "disabled",
+    "C_Cpp.intelliSenseEngine": "disabled"
 }
