rebase all commits

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "C_Cpp.default.compileCommands": "${workspaceFolder}/compile_commands.json",
+    "C_Cpp.default.compileCommands": "/home/racemus/projects/hades/build/compile_commands.json",
     "r.lsp.promptToInstall": false,
     "C_Cpp.default.configurationProvider": "mesonbuild.mesonbuild",
     "files.associations": {
