WIP: SMP rework, TODO: Implement device dismount(), implement per-block device sync workers, add pthreads

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,6 +27,7 @@
             "linux": {
                 "command": "qemu-system-x86_64",
                 "args": [
+                    "-smp", "4",
                     "-S",
                     "-gdb", "tcp::1234", "-daemonize",
                     "-d", "int",
