wip: migration to persephone

--- a/include/driver/dtable.hpp.in
+++ b/include/driver/dtable.hpp.in
@@ -5,7 +5,7 @@
 #include <driver/matchers.hpp>
 #include <driver/majtable.hpp>
 #include <fs/dev.hpp>
-#include <frg/allocation.hpp>
+#include <prs/construct.hpp>
 #include <mm/arena.hpp>
 #include <prs/allocator.hpp>
 
